--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <body>
             
 
+        <script src="lib/crisp-ui/crisp-ui.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
