--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <body>
             
+        <div class="drawers top"></div>
+        <div class="drawers bottom"></div>
 
         <script src="lib/crisp-ui/crisp-ui.js"></script>
         <script src="js/app.js"></script>
