Pie chart prototype

--- a/prototypes/charts/index.html
+++ b/prototypes/charts/index.html
@@ -15,6 +15,7 @@
         <svg viewBox="-1 -1 2 2" style="transform: rotate(-90deg)"></svg>
 
         <script src="../../lib/crisp-ui/crisp-ui.js"></script>
+        <script src="../../src/Models/PieChart.js"></script>
         <script src="./script.js"></script>
     </body>
 </html>
